# ai-devops-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  start_platform.py  test_ai_platform.py  test_app.py
app/: __init__.py  main.py
app/api/v1/: ai.py  analytics.py  auth.py  jira.py  multi_ai.py  performance.py  tests.py
app/core/: ai_engine.py  ai_engine_multi.py  cache.py  config.py  database.py  performance.py  security.py
app/integrations/: multi_ai_client.py  openai_client.py
app/models/: __init__.py  analytics.py  jira.py  test.py  user.py
app/modules/: mobile_automation.py  web_automation.py
app/schemas/: __init__.py  ai.py  jira.py  test.py  user.py
app/services/: __init__.py  ai_service.py  analytics_service.py  auth_service.py  jira_service.py  test_service.py
app/tasks/: __init__.py  ai_tasks.py  jira_tasks.py
app/utils/: helpers.py
static/: dashboard.html
test_results/: facebook_ai_test_report.json  facebook_quick_test_report.json  facebook_test_report.json  instagram_ai_test_report.json  instagram_quick_test_report.json  instagram_test_report.json  linkedin_ai_test_report.json  linkedin_test_report.json  twitter_ai_test_report.json  twitter_quick_test_report.json  twitter_test_report.json  youtube_ai_test_report.json  youtube_test_report.json
tests/: conftest.py
